2003-01-10  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Russian to ALL_LINGUAS.

2003-01-06  Jakub Steiner <jimmac@ximian.com>

	* 48x48/devices/gnome-dev-printer.png: more gnome2-like
	* 96x96/filesystems/gnome-fs-directory.png:
	* 96x96/filesystems/gnome-fs-directory-accept.png:
     sync with 48x48
	* 72x72/filesystems/gnome-fs-directory.png:
	* 72x72/filesystems/gnome-fs-directory-accept.png:
	* 36x36/filesystems/gnome-fs-directory.png:
	* 36x36/filesystems/gnome-fs-directory-accept.png:
	* 24x24/filesystems/gnome-fs-directory.png:
	* 24x24/filesystems/gnome-fs-directory-accept.png:
	* 12x12/filesystems/gnome-fs-directory.png:
	* 12x12/filesystems/gnome-fs-directory-accept.png:
     all bloody sizes, phew


2003-01-06  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* configure.in: Added "fi" to ALL_LINGUAS.

2003-01-06  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-01-02  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2002-12-28  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" to ALL_LINGUAS.

2002-12-22  Artis Trops  <hornet@navigator.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS.

2002-12-20  Alexander Larsson  <alexl@redhat.com>

	* 48x48/devices/Makefile.am (icon_DATA): 
	* 48x48/devices/gnome-dev-printer.png:
	Add printer icon.

2002-12-20  Alexander Larsson  <alexl@redhat.com>
	
	* 48x48/filesystems/Makefile.am (icon_DATA): 
	* 48x48/filesystems/gnome-fs-desktop.png:
	Added desktop icon.

=== gnome-icon-theme 0.1.5 ===
	
2002-12-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in: Bump to 0.1.5

2002-12-15  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-12-13  Yanko Kaneti  <yaneti@declera.com>

	* configure.in (ALL_LINGUAS): Added Bulgarian (bg).

2002-12-13  Alexander Larsson  <alexl@redhat.com>

	* 48x48/mimetypes/gnome-mime-x-directory-smb-share.png: