@@ -6,199 +6,199 @@ Directories=192x192/apps,192x192/devices,192x192/emblems,192x192/filesystems,192
 [192x192/apps]
 Size=192
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [192x192/devices]
 Size=192
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [192x192/emblems]
 Size=192
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [192x192/filesystems]
 Size=192
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [192x192/mimetypes]
 Size=192
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [96x96/apps]
 Size=96
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [96x96/devices]
 Size=96
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [96x96/emblems]
 Size=96
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [96x96/filesystems]
 Size=96
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [96x96/mimetypes]
 Size=96
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [72x72/apps]
 Size=72
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [72x72/devices]
 Size=72
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [72x72/emblems]
 Size=72
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [72x72/filesystems]
 Size=72
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [72x72/mimetypes]
 Size=72
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [48x48/apps]
 Size=48
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [48x48/devices]
 Size=48
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [48x48/emblems]
 Size=48
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [48x48/filesystems]
 Size=48
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [48x48/mimetypes]
 Size=48
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [36x36/apps]
 Size=36
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [36x36/devices]
 Size=36
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [36x36/emblems]
 Size=36
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [36x36/filesystems]
 Size=36
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [36x36/mimetypes]
 Size=36
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [24x24/apps]
 Size=24
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [24x24/devices]
 Size=24
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [24x24/emblems]
 Size=24
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [24x24/filesystems]
 Size=24
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [24x24/mimetypes]
 Size=24
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [12x12/apps]
 Size=12
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [12x12/devices]
 Size=12
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [12x12/emblems]
 Size=12
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [12x12/filesystems]
 Size=12
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [12x12/mimetypes]
 Size=12
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
 
 [scalable/apps]
 Size=48
 Context=Applications
-Type=Scaled
+Type=Scalable
 
 [scalable/devices]
 Size=48
 Context=Devices
-Type=Scaled
+Type=Scalable
 
 [scalable/emblems]
 Size=48
 Context=Emblems
-Type=Scaled
+Type=Scalable
 
 [scalable/filesystems]
 Size=48
 Context=FileSystems
-Type=Scaled
+Type=Scalable
 
 [scalable/mimetypes]
 Size=48
 Context=MimeTypes
-Type=Scaled
+Type=Scalable
