@@ -1,3 +1,7 @@
+2003-01-10  Jakub Steiner <jimmac@ximian.com>
+
+	* index.theme.in: spec says Scalable not Scaled
+
 2003-01-10  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* configure.in: Added Russian to ALL_LINGUAS.
